remove dead code, fix 'skip to ' contrast

--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,12 @@
   --dark-blue: #37a;
   --extra-dark-blue: #047;
   --ultra-dark-blue: #012;
+
   --light-to-white-blue: linear-gradient(to bottom, #adf 0%, #fff 100%);
   --light-to-medium-blue: linear-gradient(to bottom, #adf 0%, #6ac 100%);
   --dark-to-light-blue: linear-gradient(to bottom, #37a 0%, #adf 100%);
   --medium-to-dark-blue: linear-gradient(to bottom, #6ac 0%, #37a 100%);
-  --active-mode: #af5;
+
   --state-green: hsl(120,80%,33%);
   --state-red: hsl(345,50%,50%);
 
